<resources>
    <string name="app_name">Fontastic Maker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Fontastic Maker</string>

    <!-- images_contentDescriptions -->
    <string name="mainmenu_title">Title</string>
    <string name="mainmenu_create">Create Image Button</string>
    <string name="mainmenu_help">Help Image Button</string>
    <string name="mainmenu_about">About Image Button</string>
    <string name="nav_left">Arrow to the left</string>
    <string name="nav_right">Arrow to the right</string>
    <string name="newdraw">Creates new drawing area</string>
    <string name="brush">Brush tool</string>
    <string name="eraser">Eraser tool</string>
    <string name="savedraw">Saves the drawing</string>
    <string name="contentDescription_title">Main Activity Title</string>


    <!-- LETTERS -->
    <string name="a">Lowercase a</string>
    <string name="b">Lowercase b</string>

    <!-- APP BAR -->
    <string name="title_activity_drawing_activity">Drawing Activity</string>
    <string name="title_activity_drawing_activitya">Lowercase a</string>
    <string name="title_activity_drawing_activityb">Lowercase b</string>
    <string name="title_activity_drawing_activityc">Lowercase c</string>
    <string name="title_activity_drawing_activityd">Lowercase d</string>
    <string name="title_activity_drawing_activitye">Lowercase e</string>
    <string name="title_activity_drawing_activityf">Lowercase f</string>
    <string name="title_activity_drawing_activityg">Lowercase g</string>
    <string name="title_activity_drawing_activityh">Lowercase h</string>
    <string name="title_activity_drawing_activityi">Lowercase i</string>
    <string name="title_activity_drawing_activityj">Lowercase j</string>
    <string name="title_activity_drawing_activityk">Lowercase k</string>
    <string name="title_activity_drawing_activityl">Lowercase l</string>
    <string name="title_activity_drawing_activitym">Lowercase m</string>
    <string name="title_activity_drawing_activityn">Lowercase n</string>
    <string name="title_activity_drawing_activityo">Lowercase o</string>
    <string name="title_activity_drawing_activityp">Lowercase p</string>
    <string name="title_activity_drawing_activityq">Lowercase q</string>
    <string name="title_activity_drawing_activityr">Lowercase r</string>
    <string name="title_activity_drawing_activitys">Lowercase s</string>
    <string name="title_activity_drawing_activityt">Lowercase t</string>
    <string name="title_activity_drawing_activityu">Lowercase u</string>
    <string name="title_activity_drawing_activityv">Lowercase v</string>
    <string name="title_activity_drawing_activityw">Lowercase w</string>
    <string name="title_activity_drawing_activityx">Lowercase x</string>
    <string name="title_activity_drawing_activityy">Lowercase y</string>
    <string name="title_activity_drawing_activityz">Lowercase z</string>
    <string name="title_activity_drawing">DrawingActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
