<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".DrawingActivitya">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="#0584fb" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_drawing_activitya"
        tools:context=".DrawingActivitya">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/arrow_a_small_left"
                android:contentDescription="@string/nav_left"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:background="#fdec8c" />

            <TextView
                android:id="@+id/label_a_small"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:text="@string/a" />

            <ImageButton
                android:id="@+id/arrow_a_small_right"
                android:contentDescription="@string/nav_right"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:src="@drawable/forward"
                android:background="#fdec8c" />

        </LinearLayout>

        <com.dam.profesor.paint.canvas_class
            android:id="@+id/canvas_a"
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:background="@drawable/paper"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">


            <ImageButton
                android:id="@+id/newdraw_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/newdraw"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/brush_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/brush"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/brush" />

            <ImageButton
                android:id="@+id/eraser_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/eraser"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/eraser" />

            <ImageButton
                android:id="@+id/savedraw_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/save"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/savedraw" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
