<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dam.profesor.paint.DrawingActivityi">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/arrow_i_small_left"
                android:contentDescription="@string/nav_left"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:background="#fdec8c" />

            <TextView
                android:id="@+id/label_i_small"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:text="@string/title_activity_drawing_activityi" />

            <ImageButton
                android:id="@+id/arrow_i_small_right"
                android:contentDescription="@string/nav_right"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:src="@drawable/forward"
                android:background="#fdec8c" />

        </LinearLayout>

        <com.dam.profesor.paint.canvas_class
            android:id="@+id/canvas_i"
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:background="@drawable/paper"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">


            <ImageButton
                android:id="@+id/newdraw_i"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/newdraw"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/brush_i"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/brush"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/brush" />

            <ImageButton
                android:id="@+id/eraser_i"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/eraser"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/eraser" />

            <ImageButton
                android:id="@+id/savedraw_i"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/save"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/savedraw" />

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
