<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0584fb"
    tools:context="com.thesis.fontasticmaker.MainActivity"
    android:fitsSystemWindows="true">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:weightSum="1">

        <ImageView
            android:id="@+id/title"
            android:src="@drawable/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription_title"
            android:scaleType="centerInside"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <ImageButton
                android:id="@+id/makefont"
                android:src="@drawable/makefont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#0584fb"
                android:contentDescription="@string/mainmenu_create"
                android:scaleType="centerInside"/>

            <ImageButton
                android:id="@+id/about"
                android:src="@drawable/about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#0584fb"
                android:contentDescription="@string/mainmenu_about"
                android:scaleType="centerInside"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>

