<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dam.profesor.paint.DrawingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_drawing"
        tools:context=".DrawingActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/arrow_previous"
                android:contentDescription="@string/nav_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:src="@drawable/back"
                android:background="#fdec8c"/>

            <ViewFlipper
                android:id="@+id/image_flipper"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <ImageView
                    android:id="@+id/lowercase_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/lowercase_1" />

                <ImageView
                    android:id="@+id/lowercase_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/lowercase_2" />


            </ViewFlipper>


            <ImageButton
                android:id="@+id/arrow_next"
                android:contentDescription="@string/nav_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:src="@drawable/forward"
                android:background="#fdec8c" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/flipper_canvas"
            android:layout_width="match_parent"
            android:layout_height="365dp">

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper_1" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper_2"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_d"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_e"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_f"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_g"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_h"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_i"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_j"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_k"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_l"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_m"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_n"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_o"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_p"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_q"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_r"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_s"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_u"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_v"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_w"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_y"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_lowercase_z"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"/>

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_d"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_e"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_f"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_g"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_h"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_i"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_j"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_k"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_l"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_m"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_n"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_o"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_p"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_q"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_r"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_s"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_u"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_v"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_w"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_y"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

            <com.dam.profesor.paint.canvas_class
                android:id="@+id/canvas_uppercase_z"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper" />

        </ViewFlipper>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">


            <ImageButton
                android:id="@+id/newdraw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/newdraw"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/brush"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/brush"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/brush" />

            <ImageButton
                android:id="@+id/savedraw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/save"
                android:backgroundTint="#fef1a8"
                android:contentDescription="@string/savedraw" />
        </LinearLayout>



    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
